--- a/requirements.txt
+++ b/requirements.txt
@@ -1,116 +1,117 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-attrs=19.3.0=py_0
-backcall=0.1.0=py_0
-blas=1.0=mkl
-bleach=3.1.4=pyh9f0ad1d_0
-ca-certificates=2020.4.5.1=hecc5488_0
-certifi=2020.4.5.1=py38h32f6830_0
-cffi=1.14.0=py38ha419a9e_0
-chardet=3.0.4=py38h32f6830_1006
-chart-studio=1.1.0=pyh9f0ad1d_0
-click=7.1.1=pypi_0
-colorama=0.4.3=py_0
-colorlover=0.3.0=py_0
-cryptography=2.8=py38hb32ad35_1
-cufflinks-py=0.17.3=py_0
-dash=1.9.1=pypi_0
-dash-bootstrap-components=0.9.1=pypi_0
-dash-core-components=1.8.1=pypi_0
-dash-html-components=1.0.2=pypi_0
-dash-renderer=1.2.4=pypi_0
-dash-table=4.6.1=pypi_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-entrypoints=0.3=py38h32f6830_1001
-flask=1.1.1=pypi_0
-flask-compress=1.4.0=pypi_0
-future=0.18.2=pypi_0
-icc_rt=2019.0.0=h0cc432a_1
-idna=2.9=py_1
-importlib-metadata=1.6.0=py38h32f6830_0
-importlib_metadata=1.6.0=0
-intel-openmp=2020.0=166
-ipykernel=5.2.0=py38h5ca1d4c_1
-ipython=7.13.0=py38h32f6830_2
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.5.1=py_0
-itsdangerous=1.1.0=pypi_0
-jedi=0.16.0=py38h32f6830_1
-jinja2=2.11.1=py_0
-joblib=0.14.1=pypi_0
-jsonschema=3.2.0=py38h32f6830_1
-jupyter_client=6.1.2=py_0
-jupyter_core=4.6.3=py38h32f6830_1
-libsodium=1.0.17=h2fa13f4_0
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markupsafe=1.1.1=py38h9de7a3e_1
-mistune=0.8.4=py38hfa6e2cd_1000
-mkl=2020.0=166
-mkl-service=2.3.0=py38hb782905_0
-mkl_fft=1.0.15=py38h14836fe_0
-mkl_random=1.1.0=py38hf9181ef_0
-msys2-conda-epoch=20160418=1
-nbconvert=5.6.1=py38_0
-nbformat=5.0.4=py_0
-notebook=6.0.3=py38_0
-numpy=1.18.2=pypi_0
-numpy-base=1.18.1=py38hc3f5095_1
-openssl=1.1.1f=hfa6e2cd_0
-pandas=1.0.3=py38h47e9c7a_0
-pandoc=2.9.2=0
-pandocfilters=1.4.2=py_1
-parso=0.6.2=py_0
-pickleshare=0.7.5=py38h32f6830_1001
-pip=20.0.2=py38_1
-plotly=4.5.4=pypi_0
-prometheus_client=0.7.1=py_0
-prompt-toolkit=3.0.5=py_0
-pycparser=2.20=py_0
-pygments=2.6.1=py_0
-pyopenssl=19.1.0=py_1
-pyrsistent=0.16.0=py38h9de7a3e_0
-pysocks=1.7.1=py38h32f6830_1
-python=3.8.1=h5fd99cc_8_cpython
-python-cufflinks=0.17.3=py_0
-python-dateutil=2.8.1=py_0
-python_abi=3.8=1_cp38
-pytz=2019.3=py_0
-pywin32=227=py38hfa6e2cd_0
-pywinpty=0.5.7=py38_0
-pyzmq=19.0.0=py38hc5dc6fd_1
-requests=2.23.0=pyh8c360ce_2
-retrying=1.3.3=pypi_0
-scikit-learn=0.22.2.post1=pypi_0
-scipy=1.4.1=pypi_0
-send2trash=1.5.0=py_0
-setuptools=46.1.1=py38_0
-six=1.14.0=py38_0
-sqlite=3.31.1=he774522_0
-terminado=0.8.3=py38h32f6830_1
-testpath=0.4.4=py_0
-tornado=6.0.4=py38hfa6e2cd_0
-traitlets=4.3.3=py38h32f6830_1
-urllib3=1.25.7=py38h32f6830_1
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_1
-wcwidth=0.1.9=pyh9f0ad1d_0
-webencodings=0.5.1=py_1
-werkzeug=1.0.0=pypi_0
-wheel=0.34.2=py38_0
-widgetsnbextension=3.5.1=py38_0
-win_inet_pton=1.1.0=py38_0
-wincertstore=0.2=py38_0
-winpty=0.4.3=4
-zeromq=4.3.2=h6538335_2
-zipp=3.1.0=py_0
-
-dash~=1.9.1
-pandas~=1.0.3
-plotly~=4.5.4
-scikit-learn~=0.22.2.post1
+absl-py==0.9.0
+astroid==2.3.3
+astunparse==1.6.3
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.4
+cachetools==4.1.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+chart-studio==1.1.0
+click==7.1.1
+colorama==0.4.1
+colorlover==0.3.0
+cryptography==2.8
+cufflinks==0.17.3
+cycler==0.10.0
+dash==1.9.1
+dash-bootstrap-components==0.9.1
+dash-core-components==1.8.1
+dash-html-components==1.0.2
+dash-renderer==1.2.4
+dash-table==4.6.1
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+Flask==1.1.1
+Flask-Compress==1.4.0
+future==0.18.2
+gast==0.3.3
+google-auth==1.14.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.28.1
+h5py==2.10.0
+idna==2.9
+importlib-metadata==1.6.0
+ipykernel==5.2.0
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter-client==6.1.2
+jupyter-core==4.6.3
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+Markdown==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+mccabe==0.6.1
+mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
+numpy==1.18.2
+oauthlib==3.1.0
+opt-einsum==3.2.1
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.6.2
+pickleshare==0.7.5
+plotly==4.6.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.6.1
+pylint==2.4.3
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+Send2Trash==1.5.0
+six==1.13.0
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0rc4
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+urllib3==1.25.7
+wcwidth==0.1.9
+webencodings==0.5.1
+Werkzeug==1.0.0
+widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+wincertstore==0.2
+wrapt==1.11.2
+zipp==3.1.0
