--- a/requirements.txt
+++ b/requirements.txt
@@ -105,3 +105,13 @@ win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.11.2
 zipp==3.1.0
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+pywin32==227
+pywinpty==0.5.7
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+google-auth==1.14.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
