--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dash~=1.9.1
-dash-bootstrap-components==0.9.1
-pandas~=1.0.3
+dash==1.9.1
+pandas
 plotly~=4.5.4
 scikit-learn~=0.22.2.post1
 numpy~=1.18.2
 gunicorn==20.0.4
+tensorflow==1.15.0
