--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,113 @@
 absl-py==0.9.0
-appdirs==1.4.4
-astor==0.8.1
+astroid==2.3.3
 astunparse==1.6.3
 attrs==19.3.0
-awsebcli==3.18.1
 backcall==0.1.0
 bleach==3.1.4
-botocore==1.15.49
-Brotli==1.0.7
 cachetools==4.1.0
-cement==2.8.2
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-colorama==0.4.3
-conda==4.8.3
-conda-package-handling==1.7.0
+chart-studio==1.1.0
+click==7.1.1
+colorama==0.4.1
+colorlover==0.3.0
 cryptography==2.9.2
+cufflinks==0.17.3
+cycler==0.10.0
 dash==1.9.1
-dash-bootstrap-components==0.10.2
+dash-bootstrap-components==0.9.1
 dash-core-components==1.8.1
 dash-html-components==1.0.2
 dash-renderer==1.2.4
 dash-table==4.6.1
 decorator==4.4.2
 defusedxml==0.6.0
-distlib==0.3.0
-docutils==0.15.2
 entrypoints==0.3
-filelock==3.0.12
-Flask-Compress==1.5.0
-future==0.16.0
+Flask==1.1.1
+Flask-Compress==1.4.0
+future==0.18.2
 gast==0.3.3
-google-auth==1.16.1
+google-auth==1.14.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.29.0
+grpcio==1.28.1
+gunicorn==20.0.4
 h5py==2.10.0
-idna==2.7
+idna==2.9
 importlib-metadata==1.6.0
 ipykernel==5.1.4
 ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi==0.17.0
-Jinja2==2.11.2
-jmespath==0.10.0
-json5==0.9.5
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.15.2
+Jinja2==2.11.1
+joblib==0.14.1
 jsonschema==3.2.0
-jupyter-client==6.1.3
+jupyter-client==6.1.2
 jupyter-core==4.6.3
-jupyterlab==1.2.6
-jupyterlab-server==1.1.4
+Keras==2.3.1
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-Markdown==3.2.2
+Keras-Preprocessing==1.1.0
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+Markdown==3.2.1
 MarkupSafe==1.1.1
-menuinst==1.4.16
+matplotlib==3.2.1
+mccabe==0.6.1
 mistune==0.8.4
-navigator-updater==0.2.1
 nbconvert==5.6.1
-nbformat==5.0.6
+nbformat==5.0.4
 notebook==6.0.3
-numpy==1.18.5
+numpy==1.18.2
 oauthlib==3.1.0
 opt-einsum==3.2.1
+pandas==1.0.3
 pandocfilters==1.4.2
-parso==0.7.0
-pathspec==0.5.9
+parso==0.6.2
 pickleshare==0.7.5
-plotly==4.8.1
+plotly==4.6.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
-protobuf==3.12.2
+protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycosat==0.6.3
 pycparser==2.20
 Pygments==2.6.1
+pylint==2.4.3
 pyOpenSSL==19.1.0
-pypiwin32==223
+pyparsing==2.4.7
 pyrsistent==0.16.0
 PySocks==1.7.1
-python-dateutil==2.8.0
-pywin32==227
-pywinpty==0.5.7
+python-dateutil==2.8.1
+pytz==2019.3
 PyYAML==5.3.1
 pyzmq==18.1.1
-QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.0
-ruamel-yaml==0.15.87
+scikit-learn==0.22.2.post1
 scipy==1.4.1
-semantic-version==2.5.0
 Send2Trash==1.5.0
 six==1.15.0
-tensorboard==2.2.2
+tensorboard==2.2.1
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
+tensorflow==2.2.0rc4
 tensorflow-estimator==2.2.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
-tqdm==4.46.0
 traitlets==4.3.3
-urllib3==1.24.3
-virtualenv==20.0.21
+urllib3==1.25.8
 wcwidth==0.1.9
 webencodings==0.5.1
-Werkzeug==1.0.1
+Werkzeug==1.0.0
 widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 wincertstore==0.2
-wrapt==1.12.1
+wrapt==1.11.2
 zipp==3.1.0
